--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -14,7 +14,7 @@ items:
   - name: HDInsight 4.0
     href: ../hdinsight-version-release.md
     maintainContext: true
-- name: Snabbstart
+- name: Snabbstarter
   items:
   - name: Skapa Apache Hadoop-kluster – portalen
     href: apache-hadoop-linux-create-cluster-get-started-portal.md
@@ -31,6 +31,17 @@ items:
     maintainContext: true
   - name: Övervaka klustertillgänglighet med Ambari- och Azure Monitor-loggar
     href: ../hdinsight-cluster-availability.md
+    maintainContext: true
+- name: Exempel
+  items:
+  - name: .NET-exempel
+    href: ../hdinsight-sdk-dotnet-samples.md
+    maintainContext: true
+  - name: Java-exempel
+    href: ../hdinsight-sdk-java-samples.md
+    maintainContext: true
+  - name: Python-exempel
+    href: ../hdinsight-sdk-python-samples.md
     maintainContext: true
 - name: Begrepp
   items:
@@ -79,7 +90,7 @@ items:
         href: apache-hadoop-use-hive-curl.md
       - name: Använda Azure PowerShell
         href: apache-hadoop-use-hive-powershell.md
-      - name: Använd .NET SDK
+      - name: Använda SDK för .NET
         href: apache-hadoop-use-hive-dotnet-sdk.md
     - name: Använd en Java UDF med Hive
       href: apache-hadoop-hive-java-udf.md
@@ -92,7 +103,7 @@ items:
         href: apache-hadoop-use-mapreduce-curl.md
       - name: Använda Azure PowerShell
         href: apache-hadoop-use-mapreduce-powershell.md
-      - name: Använd .NET SDK
+      - name: Använda SDK för .NET
         href: apache-hadoop-use-mapreduce-dotnet-sdk.md
       - name: Köra MapReduce-exemplen
         href: apache-hadoop-run-samples-linux.md
@@ -103,7 +114,7 @@ items:
         href: apache-hadoop-use-pig-ssh.md
       - name: Använda Azure PowerShell
         href: apache-hadoop-use-pig-powershell.md
-      - name: Använda .NET SDK
+      - name: Använda SDK för .NET
         href: apache-hadoop-use-pig-dotnet-sdk.md
       - name: Använd cURL
         href: apache-hadoop-use-pig-curl.md
@@ -252,21 +263,9 @@ items:
       maintainContext: true
   - name: Hantera
     items:
-    - name: Skapa Linux-kluster
+    - name: Skapa HDInsight-kluster
       href: ../hdinsight-hadoop-provision-linux-clusters.md
       items:
-      - name: Använda Azure PowerShell
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-        maintainContext: true
-      - name: Använda cURL och Azure REST API
-        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-        maintainContext: true
-      - name: Använda .NET SDK
-        href: ../hdinsight-hadoop-create-linux-clusters-dotnet-sdk.md
-        maintainContext: true
-      - name: Använda Azure Classic CLI
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-        maintainContext: true
       - name: Använda Azure-portalen
         href: ../hdinsight-hadoop-create-linux-clusters-portal.md
         maintainContext: true
@@ -274,13 +273,33 @@ items:
         displayName: resource manager template, arm template, resource manager group
         href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
         maintainContext: true
+      - name: Använda SDK för .NET
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster
+      - name: Använda SDK för Python
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python#create-a-cluster
+      - name: Använda SDK för Java
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster
+      - name: Använda Azure PowerShell
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
+        maintainContext: true
+      - name: Använda cURL och Azure REST API
+        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
+        maintainContext: true
+      - name: Använda Azure Classic CLI
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
+        maintainContext: true
       maintainContext: true
-    - name: Hantera Apache Hadoop-kluster
+    - name: Hantera HDInsight-kluster
       href: ../hdinsight-administer-use-portal-linux.md
       items:
-      - name: Använd .NET SDK
-        href: ../hdinsight-administer-use-dotnet-sdk.md
-        maintainContext: true
+      - name: Använda SDK för .NET
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management
+      - name: Använda SDK för Python
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
+      - name: Använda SDK för Java
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+      - name: Använda SDK för Go (förhandsversion)
+        href: https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview
       - name: Använda Azure PowerShell
         href: ../hdinsight-administer-use-powershell.md
         maintainContext: true
@@ -326,7 +345,7 @@ items:
         href: apache-hadoop-use-sqoop-mac-linux.md
       - name: Kör med cURL
         href: apache-hadoop-use-sqoop-curl.md
-      - name: Kör med .NET SDK
+      - name: Köra med hjälp av SDK för .NET
         href: apache-hadoop-use-sqoop-dotnet-sdk.md
       - name: Köra med Azure PowerShell
         href: apache-hadoop-use-sqoop-powershell.md
@@ -442,13 +461,13 @@ items:
     href: https://azure.microsoft.com/resources/samples/?service=hdinsight
   - name: Azure PowerShell
     href: /powershell/module/az.hdinsight
-  - name: .NET SDK
+  - name: SDK för .NET
     href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
-  - name: Python SDK
+  - name: SDK för Python
     href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
-  - name: Java SDK
-    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
-  - name: Go SDK
+  - name: SDK för Java
+    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+  - name: SDK för Go
     href: ../hdinsight-go-sdk-overview.md
   - name: .NET (Apache HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
@@ -481,19 +500,19 @@ items:
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
+    href: https://social.msdn.microsoft.com/forums/azure/home?forum=hdinsight
   - name: Utbildningsväg
     href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
   - name: Microsoft Professional Program för stordata
-    href: https://academy.microsoft.com/en-us/professional-program/big-data/
+    href: https://academy.microsoft.com/en-us/professional-program/tracks/big-data/
   - name: Priskalkylator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 05766864476553f531900e14a00de14cc65c06f7
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
+ms.openlocfilehash: 3a83ed5b9f3a1015c93f14ccb4be5bd2852b146a
+ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59548216"
+ms.lasthandoff: 04/15/2019
+ms.locfileid: "59578890"
