--- a/articles/hdinsight/spark/TOC.yml
+++ b/articles/hdinsight/spark/TOC.yml
@@ -37,8 +37,19 @@ items:
     href: apache-spark-ipython-notebook-machine-learning.md
   - name: Skapa en Apache Spark-app i IntelliJ
     href: apache-spark-create-standalone-application.md
-  - name: Övervaka klustertillgänglighet med Ambari och Azure Monitor-loggar
+  - name: Övervaka klustertillgänglighet med Ambari- och Azure Monitor-loggar
     href: ../hdinsight-cluster-availability.md
+    maintainContext: true
+- name: Exempel
+  items:
+  - name: .NET-exempel
+    href: ../hdinsight-sdk-dotnet-samples.md
+    maintainContext: true
+  - name: Java-exempel
+    href: ../hdinsight-sdk-java-samples.md
+    maintainContext: true
+  - name: Python-exempel
+    href: ../hdinsight-sdk-python-samples.md
     maintainContext: true
 - name: Gör så här för att
   items:
@@ -214,45 +225,53 @@ items:
     - name: Kapacitetsplanering för kluster
       href: ../hdinsight-capacity-planning.md
       maintainContext: true
-    - name: Skapa Linux-kluster
+    - name: Skapa HDInsight-kluster
       href: ../hdinsight-hadoop-provision-linux-clusters.md
       items:
-      - name: Använda Azure PowerShell
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
-        maintainContext: true
-      - name: Använda cURL och Azure REST API
-        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
-        maintainContext: true
-      - name: Använda .NET SDK
-        href: ../hdinsight-hadoop-create-linux-clusters-dotnet-sdk.md
-        maintainContext: true
-      - name: Använda Azure Classic CLI
-        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
-        maintainContext: true
       - name: Använda Azure-portalen
         href: ../hdinsight-hadoop-create-linux-clusters-portal.md
         maintainContext: true
       - name: Använda Azure Resource Manager-mallar
         displayName: resource manager template, arm template, resource manager group
         href: ../hdinsight-hadoop-create-linux-clusters-arm-templates.md
-      maintainContext: true
-    - name: Skapa kluster på begäran
-      href: ../hdinsight-hadoop-create-linux-clusters-adf.md
+        maintainContext: true
+      - name: Använda SDK för .NET
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#create-a-cluster
+      - name: Använda SDK för Python
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python#create-a-cluster
+      - name: Använda SDK för Java
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable#create-a-cluster
+      - name: Använda Azure PowerShell
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-powershell.md
+        maintainContext: true
+      - name: Använda cURL och Azure REST API
+        href: ../hdinsight-hadoop-create-linux-clusters-curl-rest.md
+        maintainContext: true
+      - name: Använda Azure Classic CLI
+        href: ../hdinsight-hadoop-create-linux-clusters-azure-cli.md
+        maintainContext: true
+      - name: Skapa kluster på begäran
+        href: ../hdinsight-hadoop-create-linux-clusters-adf.md
+        maintainContext: true
       maintainContext: true
     - name: Hantera HDInsight-kluster
+      href: ../hdinsight-administer-use-portal-linux.md
       items:
-      - name: Använda portalen
-        href: ../hdinsight-administer-use-portal-linux.md
-        maintainContext: true
-      - name: Använd .NET SDK
-        href: ../hdinsight-administer-use-dotnet-sdk.md
-        maintainContext: true
+      - name: Använda SDK för .NET
+        href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet#management
+      - name: Använda SDK för Python
+        href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
+      - name: Använda SDK för Java
+        href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+      - name: Använda SDK för Go (förhandsversion)
+        href: https://docs.microsoft.com/azure/hdinsight/hdinsight-go-sdk-overview
       - name: Använda Azure PowerShell
         href: ../hdinsight-administer-use-powershell.md
         maintainContext: true
       - name: Använda Azure Classic CLI
         href: ../hdinsight-administer-use-command-line.md
         maintainContext: true
+      maintainContext: true
     - name: Hantera kluster med Apache Ambari-webbgränssnittet
       href: ../hdinsight-hadoop-manage-ambari.md
       items:
@@ -284,7 +303,7 @@ items:
       - name: Kör med cURL
         href: ../hadoop/apache-hadoop-use-sqoop-curl.md
         maintainContext: true
-      - name: Kör med .NET SDK
+      - name: Köra med hjälp av SDK för .NET
         href: ../hadoop/apache-hadoop-use-sqoop-dotnet-sdk.md
         maintainContext: true
       - name: Köra med Azure PowerShell
@@ -403,13 +422,13 @@ items:
     href: https://azure.microsoft.com/resources/samples/?service=hdinsight
   - name: Azure PowerShell
     href: /powershell/module/az.hdinsight
-  - name: .NET SDK
+  - name: SDK för .NET
     href: https://docs.microsoft.com/dotnet/api/overview/azure/hdinsight?view=azure-dotnet
-  - name: Python SDK
+  - name: SDK för Python
     href: https://docs.microsoft.com/python/api/overview/azure/hdinsight?view=azure-python
-  - name: Java SDK
-    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-preview
-  - name: Go SDK
+  - name: SDK för Java
+    href: https://docs.microsoft.com/java/api/overview/azure/hdinsight?view=azure-java-stable
+  - name: SDK för Go
     href: ../hdinsight-go-sdk-overview.md
   - name: .NET (Apache HBase)
     href: https://www.nuget.org/packages/Microsoft.HBase.Client/
@@ -432,19 +451,19 @@ items:
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
-    href: https://social.msdn.microsoft.com/forums/azure/en-US/home?forum=hdinsight
+    href: https://social.msdn.microsoft.com/forums/azure/home?forum=hdinsight
   - name: Utbildningsväg
     href: https://azure.microsoft.com/documentation/learning-paths/hdinsight-self-guided-hadoop-training/
   - name: Microsoft Professional Program för stordata
-    href: https://academy.microsoft.com/en-us/professional-program/big-data/
+    href: https://academy.microsoft.com/en-us/professional-program/tracks/big-data/
   - name: Priskalkylator
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: d219c54110d8e2c24823c858f152d3fb6ae874ba
-ms.sourcegitcommit: 031e4165a1767c00bb5365ce9b2a189c8b69d4c0
+ms.openlocfilehash: c345237788f49bd9fc785eeaed5831b89231bff4
+ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/13/2019
-ms.locfileid: "59544168"
+ms.lasthandoff: 04/15/2019
+ms.locfileid: "59578398"
