--- a/articles/container-instances/TOC.yml
+++ b/articles/container-instances/TOC.yml
@@ -60,6 +60,8 @@ items:
       href: container-instances-restart-policy.md
     - name: Ange miljövariabler (env)
       href: container-instances-environment-variables.md
+    - name: Åsidosätta containerns startpunkt
+      href: container-instances-start-command.md
     - name: Köra ett kommando (exec)
       href: container-instances-exec.md
     - name: Köra Jenkins-versionsjobb
@@ -82,6 +84,8 @@ items:
     items:
     - name: Konfigurera liveavsökningar
       href: container-instances-liveness-probe.md
+    - name: Stoppa och starta containrar
+      href: container-instances-stop-start.md
     - name: Uppdatera containrar som körs
       href: container-instances-update.md
   - name: Övervaka och logga
@@ -130,9 +134,9 @@ items:
     href: https://stackoverflow.com/questions/tagged/azure-container-instances
   - name: Videoklipp
     href: https://azure.microsoft.com/resources/videos/index/?services=container-instances&sort=newest
-ms.openlocfilehash: 4a2f2f48232bc78aa636934b0ac3a38bec2c1a23
-ms.sourcegitcommit: 045406e0aa1beb7537c12c0ea1fbf736062708e8
+ms.openlocfilehash: 5a95264c8fc909e58a2db0f423ded86225d5a71c
+ms.sourcegitcommit: 5f348bf7d6cf8e074576c73055e17d7036982ddb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/04/2019
-ms.locfileid: "59006047"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59608426"
