--- a/articles/hdinsight/hadoop/TOC.yml
+++ b/articles/hdinsight/hadoop/TOC.yml
@@ -491,12 +491,15 @@ items:
 - name: Resurser
   items:
   - name: Viktig information
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Aktuell viktig information
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Arkiverad viktig information
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
+  - name: Ändringar för åtkomst till klusterkonfiguration
+    href: ../hdinsight-migrate-granular-access-cluster-configurations.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
@@ -510,9 +513,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 3a83ed5b9f3a1015c93f14ccb4be5bd2852b146a
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: 5c414ef4d9726f44ea3642a93035364dec304fa0
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59578890"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59616891"
