--- a/articles/hdinsight/r-server/TOC.yml
+++ b/articles/hdinsight/r-server/TOC.yml
@@ -254,6 +254,8 @@ items:
       - name: Optimera Apache Hive-frågor
         href: ../hdinsight-hadoop-optimize-hive-query.md
         maintainContext: true
+      - name: Ändringar för åtkomst till klusterkonfiguration
+        href: ../hdinsight-migrate-granular-access-cluster-configurations.md
     maintainContext: true
 - name: Företagsberedskap
   items:
@@ -307,12 +309,13 @@ items:
   - name: Utvecklarguide för R
     href: ../../machine-learning/r-developers-guide.md
   - name: Viktig information
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Aktuell viktig information
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Arkiverad viktig information
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
@@ -326,9 +329,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: cfeff50427913e7df70bd3a2af3ea83519d27cfe
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: 918489a8dbac91078af6114ae4942d8411460a21
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59579095"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615752"
