--- a/articles/hdinsight/interactive-query/TOC.yml
+++ b/articles/hdinsight/interactive-query/TOC.yml
@@ -248,6 +248,9 @@ items:
     - name: OS-korrigering för HDInsight-kluster
       href: ../hdinsight-os-patching.md
       maintainContext: true
+    - name: Migrera Hive-arbetsbelastningar till HDInsight 4.0
+      href: apache-hive-migrate-workloads.md
+      maintainContext: true
   - name: Felsöka
     href: ../hdinsight-troubleshoot-guide.md
     items:
@@ -357,12 +360,15 @@ items:
 - name: Resurser
   items:
   - name: Viktig information
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Aktuell viktig information
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Arkiverad viktig information
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
+  - name: Ändringar för åtkomst till klusterkonfiguration
+    href: ../hdinsight-migrate-granular-access-cluster-configurations.md
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
@@ -376,9 +382,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: 9aac9dcaa0e7a853b3cedf88a7666f789dbf558f
-ms.sourcegitcommit: 48a41b4b0bb89a8579fc35aa805cea22e2b9922c
+ms.openlocfilehash: 2f9952a95da9a47448d54ba5b48be033fb5707cc
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/15/2019
-ms.locfileid: "59579078"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615731"
