--- a/articles/hdinsight/domain-joined/TOC.yml
+++ b/articles/hdinsight/domain-joined/TOC.yml
@@ -84,12 +84,13 @@ items:
 - name: Resurser
   items:
   - name: Viktig information
-    href: ../hdinsight-release-notes.md
     items:
+    - name: Aktuell viktig information
+      href: ../hdinsight-release-notes.md
+      maintainContext: true
     - name: Arkiverad viktig information
       href: ../hdinsight-release-notes-archive.md
       maintainContext: true
-    maintainContext: true
   - name: Azure-översikt
     href: https://azure.microsoft.com/roadmap/?category=intelligence-analytics
   - name: Få hjälp i forumet
@@ -103,9 +104,9 @@ items:
   - name: Windows-verktyg för HDInsight
     href: ../hdinsight-hadoop-windows-tools.md
     maintainContext: true
-ms.openlocfilehash: ac5c2039135c557e5adc57193db5efbf0ec7de7e
-ms.sourcegitcommit: 223604d8b6ef20a8c115ff877981ce22ada6155a
+ms.openlocfilehash: a5fbf08dbe808a2e476edd90c3eaad29bc7fa1a1
+ms.sourcegitcommit: fec96500757e55e7716892ddff9a187f61ae81f7
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/22/2019
-ms.locfileid: "58362041"
+ms.lasthandoff: 04/16/2019
+ms.locfileid: "59615735"
